--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Cache dependencies
         uses: ./.github/actions/cached_deps
+        with:
+          caching: false
   test:
     runs-on: ubuntu-latest
     steps:
